2009-10-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Don't include trailing newlines when using reflow command.
 * src/notebook.c:
   Add stock close buttons to notebook tab popup menu.
 * src/plugindata.h, src/document.c, src/plugins.c, src/ui_utils.c,
   plugins/geanyfunctions.h:
   Add document_get_notebook_page() to API.
   Minor edits of dox.


2009-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c, src/plugindata.h, src/plugins.c, src/ui_utils.c,
   src/ui_utils.h, plugins/geanyfunctions.h, plugins/splitwindow.c:
   Make Split Window 'Show current document' button have a drop-down menu
   to select the other documents.
   Add new API function ui_menu_add_document_items().


2009-10-13  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix sensitivity settings for compile and build toolbar items.


2009-10-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c:
   Don't use filetype submenus for templates (slower to navigate, often
   only 1 per-filetype anyway).
 * src/templates.c:
   Put old filetype template menu items in 'Old' submenu as they should
   be removed after the 0.19 release.
 * src/keybindings.c, src/keybindings.h, src/pluginutils.c:
   Add GeanyKeyGroup callback support, which allow keybinding callbacks
   to be ignored if inappropriate so a later keybinding with the same
   key combination can intercept it. (Also group callbacks are usually
   tidier than separate callbacks).
   Remove special handling for GEANY_KEYS_EDIT_COMPLETESNIPPET.
 * src/templates.c, src/build.c, src/utils.c, src/utils.h,
   src/project.c, src/search.c, src/editor.c, src/ui_utils.c,
   plugins/classbuilder.c:
   Make utils_free_pointers() take 4 arguments, add to API.
 * src/templates.c, src/tools.c, src/ui_utils.c:
   Fix memory leaks with gtk_container_get_children().


2009-10-12  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c: