@@ -1,20 +1,18 @@
-
 <?php
 {fileheader}
 ?>
-
-<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\"
-  \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">
-<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"en\" lang=\"en\">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
 	<title>{untitled}</title>
-	<meta http-equiv=\"content-type\" content=\"text/html;charset=utf-8\" />
-	<meta name=\"generator\" content=\"{geanyversion}\" />
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta name="generator" content="{geanyversion}" />
 </head>
 
 <body>
 	
 </body>
-</html>
 
+</html>
