@@ -8,6 +8,8 @@
    plugins/geanyfunctions.h:
    Add document_get_notebook_page() to API.
    Minor edits of dox.
+ * data/templates/files/file.html, data/templates/files/file.php:
+   Fix wrong escaping (patch by dmaphy, thanks - closes 2878138).
 
 
 2009-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
